JO-2007-07-20-0: Bugfix:    Changed order in which views are dropped to reflect
                            new dependencies
                 Review:    JP

LP-2007-07-20-0: Enhancem:  Improved jgdi_shell tests
                 Review:    PJ

AP-2007-07-19-0: Bugfix:    Error when modifying additional checktree directory 
                            items.
                 Issue:     135

RD-2007-07-18-0: Enhancem:  Added test for AR resource reservation
                 Review:    JG

JG-2007-07-16-0: Bugfix:    Fixed installation in CSP mode.
                 Review:    CR

JG-2007-07-16-0: Bugfix:    Fixed drmaaj test.
                 Review:    CR

JG-2007-07-12-0: Bugfix:    Fixes for usage test, modifying checkpoint objects,
                            modifying projects, cleanup.
                 Review:    MD

PJ-2007-07-11-0: Enhancem.: qsh, qrsh, qlogin -ar tests
                 Review:    JG
                 
JG-2007-07-10-0: Bugfix:    When testsuite did an install re_init after a test
                            failed, and the installation raised a warning, 
                            testsuite did a full reinstall.
                 Review:    CR

AP-2007-07-09-0: Enhancem.: Added qacct test for issue 2189
                 Review:    JG

RD-2007-07-09-0: Enhancem.: Added some tests for Advance Reservation
                 Review:    JG

RN-2007-07-09-0: Bugfix:    - Creating a userset with NONE as a type results
                              in a core dump
                            - Userset type should not accept empty string value
                 Issue :    2323,2324
                 Review:    JG

CR-2007-07-05-0: Enhancem.: src/checktree_hedeby/checktree.tcl:
                            hedeby_build procedure will report all
                            errors found in build_private.properties
                            instead returning when found the first 
                            error
